--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
       "nunomaduro/larastan": "^2.0",
       "phpstan/phpstan": "^1.8",
       "orchestra/testbench": "^7.11",
-      "friendsofphp/php-cs-fixer": "^3.0",
-      "laravel/dusk": "^7.1"
+      "friendsofphp/php-cs-fixer": "^3.0"
   },
   "autoload": {
     "psr-4": {
